--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Este es un sitio web con Github Pages</h1>
 <p>Y fue creado con amor para el curdo de Git y Github de Platzi</p>
-<p><img src="https://imgur.com/gallery/D1ktVuP"/"</p>
+<p><img src="https://imgur.com/gallery/D1ktVuP"/></p>
