cambio de video por gif

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <h1>Este es un sitio web con Github Pages</h1>
-<p>Y fue creado con amor para el curdo de Git y Github de Platzi</p>
-<p><img src="https://imgur.com/gallery/D1ktVuP"/></p>
+<p>Y fue creado con amor para el curso de Git y Github de Platzi</p>
+<p>
+    <img src="https://res.cloudinary.com/cloudinary-marketing/images/c_fill,w_750/f_auto,q_auto/v1649720751/Web_Assets/blog/Mario_1/Mario_1-gif?_i=AA"/>
+</p>
